about us card area and top drivers gap fixing insve 670px

--- a/Css/responsive.css
+++ b/Css/responsive.css
@@ -74,8 +74,17 @@
 
     }
 
+    /* about us area  */
+    #about__us{
+        margin-top: 100px;
+        .about__card{
+            flex-wrap: wrap;
+        }
+    }
+
     /* Top driver area  */
     #top__driver{
+        padding: 700px 0;
         .driver__card{
             .card{
                 margin-top: 15px;
